# backend_task

./: README.md
thndr_task/: Dockerfile  background_task.py  docker-compose.yml  manage.py  pyproject.toml
thndr_task/stocks/: urls.py  views.py
thndr_task/stocks/migrations/: 0001_initial.py  0002_delete_stock.py
thndr_task/thndr_task/: asgi.py  env.py  settings.py  urls.py  wsgi.py
thndr_task/users/: constants.py  models.py  serializers.py  tests.py  urls.py  views.py
thndr_task/users/migrations/: 0001_initial.py  0002_user_stocks.py  0003_alter_user_stocks.py
thndr_task/utils/: redis_client.py
